external. core. avis

--- a/static/data/GHIMSProjectMembers.json
+++ b/static/data/GHIMSProjectMembers.json
@@ -4,7 +4,7 @@
     "FullName": "Rose Coleman",
     "Designation": "Team Lead",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -14,7 +14,7 @@
     "FullName": "Prince Lartey",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -24,7 +24,7 @@
     "FullName": "Dominic Asare",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -34,7 +34,7 @@
     "FullName": "Audrey Akweongo",
     "Designation": "Project",
     "Department": "Project Management",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -44,7 +44,7 @@
     "FullName": "William Anderson Benson",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -54,7 +54,7 @@
     "FullName": "Yaw Boakye Boateng",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -64,7 +64,7 @@
     "FullName": "Adeola Akinfoyewa",
     "Designation": "Project Manager",
     "Department": "Project Management",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -74,7 +74,7 @@
     "FullName": "Akosua Boatemaa",
     "Designation": "Field Coordinator",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -84,17 +84,17 @@
     "FullName": "Lucas Elikplim Djaba",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
   },
   {
     "IdNumber": "AXN-00113",
-    "FullName": "Karim Awudulai",
+    "FullName": "Karim Abdulai",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -104,7 +104,7 @@
     "FullName": "Nester Adjei Okertchiri",
     "Designation": "Virtual Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -114,7 +114,7 @@
     "FullName": "David Danso",
     "Designation": "Network Technician",
     "Department": "Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -124,7 +124,7 @@
     "FullName": "Brightmore Quansah",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -134,7 +134,7 @@
     "FullName": "Helen Vortia",
     "Designation": "Assistant Finance manager",
     "Department": "Finance Dept",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -144,7 +144,7 @@
     "FullName": "Klenam Dzikunu",
     "Designation": "Project Manager",
     "Department": "Project Management",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -154,7 +154,7 @@
     "FullName": "Kenneth Aseye Kutsoati",
     "Designation": "Team Lead",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -164,7 +164,7 @@
     "FullName": "Manasseh Afenyah",
     "Designation": "IT Systems Engineer",
     "Department": "Project, Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -174,7 +174,7 @@
     "FullName": "Ernest Kobi Adjei",
     "Designation": "Human Resource",
     "Department": "Project, Recruitment",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -184,7 +184,7 @@
     "FullName": "Bless Dunu Junior",
     "Designation": "Team Lead",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/BlessDunu.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -194,7 +194,7 @@
     "FullName": "Conrad Djokoto",
     "Designation": "Team Lead, Apps Development",
     "Department": "Project, Training & Support, Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/ConradDjokoto.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -204,7 +204,7 @@
     "FullName": "Kenneth Ofori-Darkwah",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/KennethOforiDarkwah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -214,7 +214,7 @@
     "FullName": "Edwin Etornam Zeye",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/EdwinZeye.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -224,7 +224,7 @@
     "FullName": "Selasi Kwaku Ahiaxornu",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/SelasiAhiaxornu.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -234,7 +234,7 @@
     "FullName": "Peter Mensah Asante",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/PeterAsante.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -244,7 +244,7 @@
     "FullName": "Frank Asare",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/FrankAsare.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -254,7 +254,7 @@
     "FullName": "Ebenezer Boakye",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/EbenezerBoakye.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -264,7 +264,7 @@
     "FullName": "Albert Mensah",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/AlbertMensah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -274,7 +274,7 @@
     "FullName": "Michael Nokrah",
     "Designation": "Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/MichaelNokrah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -284,7 +284,7 @@
     "FullName": "Elisha Sedoh",
     "Designation": "Network Technician",
     "Department": "Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "https://axpi.vercel.app/projects/1",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -294,7 +294,7 @@
     "FullName": "Edward Afful",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/EdwardEfful.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -304,7 +304,7 @@
     "FullName": "Thomas Nii Armah Okai",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/ThomasOkai.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -314,7 +314,7 @@
     "FullName": "Prince Agyemang",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/PrinceAgyemang.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -324,7 +324,7 @@
     "FullName": "Daniel Pappoe",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/DanielPappoe.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -334,7 +334,7 @@
     "FullName": "Derrick Nii Teiko Aryee",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/DerrickTeiko.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -344,7 +344,7 @@
     "FullName": "Inusah Mohammed Bance",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/InusahBance.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -354,7 +354,7 @@
     "FullName": "Nana Kwabena Bawuah",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/NanaBawuah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -364,7 +364,7 @@
     "FullName": "Michael Avornyo",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/MichaelAvornyo.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -374,7 +374,7 @@
     "FullName": "Daniel Ogbarmey Tetteh",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/DanielTetteh.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -384,7 +384,7 @@
     "FullName": "Alexander Atuobi",
     "Designation": "Assistant Lead Trainer",
     "Department": "Project, Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/AlexanderAtuobi.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -394,7 +394,7 @@
     "FullName": "Samuel Elikplim Kale",
     "Designation": "Network Technician",
     "Department": "Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/SamuelKale.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -404,7 +404,7 @@
     "FullName": "Rhoda Kusi Appiah Pomaa",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/RhodaAppiah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -414,7 +414,7 @@
     "FullName": "Solomon Yaw Odame",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/SolomonOdame.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -424,7 +424,7 @@
     "FullName": "Lawrence Johnson",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/Lawrence.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -434,7 +434,7 @@
     "FullName": "Charlotte Morenikeji Manu",
     "Designation": "Lead Trainer (Provisional)",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/CharlotteManu.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -444,7 +444,7 @@
     "FullName": "Monica Afun",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/MonicaAfun.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -454,7 +454,7 @@
     "FullName": "Alfred Doudu Gaisie",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/AlfredGaisie.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -464,7 +464,7 @@
     "FullName": "Dorothy Seyram Adede Ayiku",
     "Designation": "Lead Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/DorothyAyiku.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -474,7 +474,7 @@
     "FullName": "Jessica Nuako Bentil",
     "Designation": "Project Lead",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/JessicaBentil.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -484,7 +484,7 @@
     "FullName": "Kofi Agyemang Afriyie",
     "Designation": "Project Manager",
     "Department": "Project, Quality Assurance",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/KofiAfriyie.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -494,7 +494,7 @@
     "FullName": "Kenneth Appiah",
     "Designation": "Team Lead, Apps Development",
     "Department": "Project, Training & Support, Infrastructure",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/KennethAppiah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -504,7 +504,7 @@
     "FullName": "Bashiru Jibril Madaha",
     "Designation": "Team Lead Apps Developer",
     "Department": "Project, Applications Development",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/BashiruMadaha.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -514,7 +514,7 @@
     "FullName": "Kwesi Essiamah",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/KwesiEssiamah.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -524,7 +524,7 @@
     "FullName": "Jerry Ayitey",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/JerryAyitey.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -534,7 +534,7 @@
     "FullName": "Lawrence Sam",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/LawrenceSam.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
@@ -544,7 +544,7 @@
     "FullName": "David Habib Akande",
     "Designation": "Field Trainer",
     "Department": "Training & Support",
-    "ImageUrl": "https://projects.axoninfosystems.com/projects/1",
+    "ImageUrl": "/images/DavidAkande.jpg",
     "DateOfIssue": "2025-10-30",
     "DateOfExpiry": "2026-10-30",
     "IsActive": true
